<resources>
    <string name="app_name">Трансфорт</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="navigation_drawer_open">Открыть меню</string>
    <string name="navigation_drawer_close">Закрыть меню</string>
    <string name="Yes">Да</string>
    <string name="No">Нет</string>
    <string name="Cancel">Отмена</string>
    <string name="Ok">Ok</string>
    <string name="Error">Ошибка</string>
    <string name="Loading">Загрузка</string>
    <string name="find">Найти</string>
    <string name="send">Отправить</string>
    <string name="clear">Очистить</string>
    <string name="select">Выбрать</string>
    <string name="auth_err">Ошибка авторизации</string>
    <string name="recovery_err">Ошибка восстановления пароля</string>
    <string name="ordering">Упорядочить</string>
    <string name="by_date_placing">по дате размещения</string>
    <string name="by_date_feeding">по дате подачи</string>
    <string name="new_to_old">новые -> старые</string>
    <string name="old_to_new">старые -> новые</string>
    <string name="quick_notquick">срочные -> несрочные</string>
    <string name="notquick_quick">несрочные -> срочные</string>
    <string name="order_cancel">Отмена</string>
    <string name="my_orders">Мои заказы</string>
    <string name="querys">Запросы</string>
    <string name="in_preview">На рассмотрении</string>
    <string name="accepted">Принятые</string>
    <string name="divider_above">DividerAbove</string>
    <string name="divider_below">DividerBelow</string>
    <string name="find_orders">Поиск заказов</string>
    <string name="autopark">Автопарк</string>
    <string name="questions">Частые вопросы</string>
    <string name="feedback">Обратная связь</string>
    <string name="about">О приложении</string>
    <string name="test_fio">Константин Константинопольский</string>
    <string name="performer">Исполнитель</string>
    <string name="outlined_text">Тест</string>
    <string name="outlined_hint">Заголовок</string>
    <string name="number">Номер</string>
    <string name="executive_selected">Выбран исполнитель</string>
    <string name="under_consideration">На рассмотрении</string>
    <string name="be_in_progress">Выполняется</string>
    <string name="done">Выполнен</string>
    <string name="cargo">Грузовая</string>
    <string name="passenger">Пассажирская</string>
    <string name="special">Аренда спецтехники</string>
    <string name="order_type">Тип перевозки</string>
    <string name="auto_class">Класс авто"</string>
    <string name="address">Адрес подачи</string>
    <string name="date">Дата подачи</string>
    <string name="begin">Начало</string>
    <string name="findNOrders">Найденно %d заказов</string>
    <string name="showOrders">Показать</string>
    <string name="num">№</string>
    <string name="app_name_rus">трансфорт</string>
    <string name="dadata_api">af399c90c802189b0297bce99952da444f4fbc5d</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="restore_password_detail">В течении нескольких минут на указанный адрес электронной почты придет письмо с кодом для восстановления пароля.</string>
    <string name="she_not_set">Не назначена</string>
    <string name="zero_zero">0.0</string>
    <string name="zero_zero_rub">0.0 руб.</string>
    <string name="he_not_set">Не назначен</string>
    <string name="price_not_set">Цена не назначена</string>
    <string name="supplier_not_set">Исполнитель не назначен</string>
    <string name="order_not_set">Номер заказа не назначен</string>
    <string name="car_price_by_hour">Цена за час:</string>
    <string name="car_price_by_km">Цена за км:</string>
    <string name="not_found_error_message">Not found</string>
    <string name="network_error_message">Network error</string>
    <string name="remote_error_message">Remote server error</string>
    <string name="unknown_error_message">Unknown error</string>
    <string name="inn">ИНН:</string>
    <string name="back">Назад</string>
    <string name="confirm_offer">Подтвердить</string>
    <string name="confirm_state">Подтверждено</string>
    <string name="order_num">Заказ №</string>
    <string name="order_from">от</string>
    <string name="cancel_state">Отменено</string>
    <string name="demo">Ведутся работы</string>
    <string name="choose_carriage">Выберите "Тип перевозки"</string>
    <string name="not_set">Не указан</string>
    <string name="not_set2">Не указана</string>
    <string name="not_set3">Не указано</string>
    <string name="input_code">Введите код</string>
    <string name="input_new_password">Введите новый пароль (латинские буквы и цифры)</string>
    <string name="input_new_password_hint">Новый пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="code_fail">Введите код</string>
    <string name="success_change_password">Пароль успешно изменен</string>
    <string name="psw_cmp_fail">Пароли не совпадают</string>
    <string name="restore_password">Восстановление пароля</string>
    <string name="byOrder">По Заказу</string>
    <string name="dateBegin">Дата начала работ</string>
    <string name="dateEnd">Дата окончания работ</string>
    <string name="workTime">Время работы</string>
    <string name="planDistance">Пробег техники, км.</string>
    <string name="planDistanceHint">Пробег техники</string>
    <string name="workTimeMehanizm">Время использования\nоборудования</string>
    <string name="workTimeMehanizmHint">Время использования</string>
    <string name="byFact">По Факту</string>
    <string name="test_email">test@email.ru</string>
    <string name="test_phone">+7 (499) 778 - 89 - 96</string>
    <string name="organizations">Организации</string>
    <string name="edit_personal_data">Редактировать личные данные</string>
    <string name="IP">Индивидуальный Предприниматель</string>
    <string name="notification">Уведомления</string>
    <string name="settings">Настройки аккаунта</string>
    <string name="question">Часто задаваемые вопросы</string>
    <string name="chat">Обратная связь</string>
    <string name="exec_time_in_over">Нельзя выставить время аренды больше 30 суток!</string>
    <string name="exec_time_meh_over">Нельзя выставить время использования оборудования больше 30 суток!</string>
    <string name="FIO">ФИО</string>
    <string name="POS">Должность</string>
    <string name="nullstr">(null)</string>
    <string name="token_update">PUSH токен обновлен</string>
    <string name="zero">0</string>
    <string name="zero_rub">0 руб</string>
    <string name="test_user">KonstantinovA</string>
    <string name="test_pass">123</string>
    <string name="customer_iam">ShatalinD</string>
    <string name="supplier_iam">DShatalin</string>
    <string name="Km">KMaksimovich</string>
    <string name="mK">MaksimovichK</string>
    <string name="mKKmP">1234</string>
    <string name="dudina_u">DudinaO</string>
    <string name="dudina_o">ODudina</string>
    <string name="dudina_p">1</string>
    <string name="custom_work_title">Работа по заказу</string>
    <string name="rent_time_not_set">Не заданно</string>
    <string name="ex_user_1">Chapaev</string>
    <string name="ex_pass_1">123</string>
    <string name="ex_user_2">DavidB</string>
    <string name="ex_pass_2">123</string>
    <string name="truck">Грузовик</string>
    <string name="gradient">Градиент</string>
    <string name="skip">Пропустить</string>
    <string name="login"><font size="14">Логин</font></string>
    <string name="password_14"><font size="14">Пароль</font></string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="logo_title">Трансфорт</string>
    <string name="enter_text">Войти</string>
    <string name="no_account">Нет аккаунта.</string>
    <string name="check_in">Зарегистрироваться</string>
    <string name="check_user_name">Введите Имя</string>
    <string name="check_user_email">Введите email(Логин)</string>
    <string name="input_file_name">Введите Имя фала</string>
    <string name="update_user_success">Данные Пользователя успешно обновлены</string>
    <string name="check_inputs">Введите данные</string>
    <string name="check_login">Введите логин</string>
    <string name="check_password">Введите пароль</string>
    <string name="offer_confirm">Исполнитель выбран</string>
    <string name="offer_confirm_fail">Ошибка выбора исполнителя</string>
    <string name="error_code">Код ошибки:</string>
    <string name="version_check_fail">Версия приложения не поддерживается. Обновите приложение из google play</string>
    <string name="tariff">Тариф:</string>
    <string name="find_ts">Поиск ТС</string>
    <string name="my_orders_caps">МОИ ЗАКАЗЫ</string>
    <string name="my_orders_normal">Мои заказы</string>
    <string name="profile">Профиль</string>
    <string name="from">с</string>
    <string name="from_date">от</string>
    <string name="to">до</string>
    <string name="demo_mode">Демо режим</string>
    <string name="vehicle_lease_variant">Вариант аренды ТС</string>
    <string name="by_time">по часам</string>
    <string name="error_vehicle_lease">Выберите вариант аренды ТС</string>
    <string name="error_capacity">Выберите класс грузоподъемности</string>
    <string name="filling_date">Дата подачи</string>
    <string name="error_filling_date">Выберите дату подачи</string>
    <string name="error_classificator">Выберите классификатор</string>
    <string name="error_carriage">Выберите тип перевозки</string>
    <string name="error_carriage2">Выберите тип кузова</string>
    <string name="error_model">Выберите модель</string>
    <string name="region_descr">Регион обслуживания:</string>
    <string name="region">Регион подачи</string>
    <string name="error_region">Введите регион</string>
    <string name="search_button">Найти</string>
    <string name="search_vehicle">Поиск ТС</string>
    <string name="search_orders">Поиск заказов</string>
    <string name="supplier">Исполнитель:</string>
    <string name="supplier_hint">Исполнитель</string>
    <string name="customer_hint">Заказчик</string>
    <string name="supplier_id">Идентификатор исполнителя:</string>
    <string name="byVersionSupplier">По версии исполнителя</string>
    <string name="byVersionCustomer">По версии заказчика</string>
    <string name="supplierNotComplete">Исполнитель еще не заявил об окончании работ</string>
    <string name="customerNotComplete">Заказчик еще не принял окончание работ</string>
    <string name="documents">Документы</string>
    <string name="exec_notification_title">Уведомить об окончании работ</string>
    <string name="exec_notification_line2_title">по заказу №</string>
    <string name="exec_title_from">от</string>
    <string name="exec_customer_confirm_title">Подтверждение выполнения перевозки</string>
    <string name="exec_customer_cancel_title">Отказ подтверждения перевозки</string>
    <string name="exec_rating">Оценка перевозки</string>
    <string name="star">*</string>
    <string name="type_owenership_hint">Форма собственности</string>
    <string name="organization_legal_address">Юридический адрес</string>
    <string name="organization_coin_fact">Совпадает с фактическим</string>
    <string name="organization_type">Тип организации</string>
    <string name="organization_customer">Заказчик</string>
    <string name="organization_supplier">Исполнитель</string>
    <string name="organization_tax">Форма налогообложения</string>
    <string name="organization_with_nds">С НДС</string>
    <string name="organization_without_nds">Без НДС</string>
    <string name="type_owenership">Форма собственности</string>
    <string name="next">Продолжить</string>
    <string name="recal_pass">Вы вспомнили свой пароль?</string>
    <string name="recal_auth">Авторизация</string>
    <string name="reg_email_hint">Ваш Email адрес</string>
    <string name="reg_cancel">Отменить</string>
</resources>