<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wd="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llRestoreRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color_opacity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/restore_password"
        android:textColor="@color/cl_000000"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvTitleDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/restore_password_detail"
        android:textSize="12dp"/>

    <LinearLayout
        android:id="@+id/ll_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ru.wdsoft.ui.field.FieldEmail
            android:id="@+id/fld_user_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            wd:efld_caption="@string/reg_email_hint"
            wd:obligatory="true"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rlButtons2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llOrganization"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/red_button_background"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/btn_next"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/white_button_background"
            android:text="@string/reg_cancel"
            android:textAllCaps="false"
            android:textColor="@color/lightish_red"
            android:textSize="16sp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvYouRecalPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recal_pass"
            android:textSize="12dp"/>

        <TextView
            android:id="@+id/tvYouRecalAuth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:clickable="true"
            android:text="@string/recal_auth"
            android:textSize="12dp"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>