<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="start"
    android:layoutDirection="ltr"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/cbCargo"
        android:text="@string/cargo"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:button="@drawable/checkbox_checked"
        android:paddingStart="@dimen/_14sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/cbPassenger"
        android:layout_below="@id/cbCargo"
        android:text="@string/passenger"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:button="@drawable/checkbox_checked"
        android:paddingStart="@dimen/_14sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/cbSpecial"
        android:layout_below="@id/cbPassenger"
        android:text="@string/special"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:button="@drawable/checkbox_checked"
        android:paddingStart="@dimen/_14sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>