<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_organization_type_title"
        style="@style/LightDarkTextNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_32"
        android:layout_marginStart="@dimen/margin_32"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/organization_type" />

    <LinearLayout
        android:id="@+id/ll_organization_type_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_organization_customer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_32"
            android:layout_marginStart="@dimen/margin_32"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/organization_customer" />

        <CheckBox
            android:id="@+id/cb_organization_supplier"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_32"
            android:layout_marginStart="@dimen/margin_32"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/organization_supplier" />

    </LinearLayout>
</LinearLayout>
