<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_organization_tax_title"
        style="@style/LightDarkTextNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_32"
        android:layout_marginStart="@dimen/margin_32"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/organization_tax" />

    <LinearLayout
        android:id="@+id/ll_organization_tax_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radioGroupSetectTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_organization_with_nds"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_32"
                android:layout_marginStart="@dimen/margin_32"
                android:layout_marginTop="@dimen/margin_8"
                android:checked="true"
                android:text="@string/organization_with_nds" />

            <RadioButton
                android:id="@+id/rb_organization_without_nds"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_32"
                android:layout_marginStart="@dimen/margin_32"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/organization_without_nds" />
        </RadioGroup>

    </LinearLayout>
</LinearLayout>
