<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wd="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_organization_legal_address_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_organization_legal_address_title"
            style="@style/LightDarkTextNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_32"
            android:layout_marginLeft="@dimen/margin_32"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/organization_legal_address"/>

        <TextView
            android:id="@+id/tv_organization_legal_address_star"
            style="@style/RedTextNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/star"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ru.wdsoft.ui.field.FieldText
            android:id="@+id/fld_organization_legal_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            wd:efld_caption="Имя"
            wd:obligatory="true"/>

        <CheckBox
            android:id="@+id/cb_organization_coin_fact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fld_organization_legal_address"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/organization_coin_fact"/>
    </LinearLayout>
</LinearLayout>
